# grype-analyse

./: README.md  pyproject.toml
src/grype_analyse/: grype_analyse.py
